# roster-cpp

./: .gitignore  CMakeLists.txt  compile_commands.json
doc/: about.md
inc/: ERRORS.hpp  individual.hpp  person.hpp  person_process.hpp
src/: CMakeLists.txt  individual.cpp  main.cpp  person.cpp  person_process.cpp
